--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <main class="mdl-layout__content">
         <p></p>
         <img
-          src="./images/notebook-animation.svg"
+          src="./images/trapezoid.svg"
           alt="Computer"
           width="25%"
           height="25%"
