--- a/index.html
+++ b/index.html
@@ -42,16 +42,18 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
   </head>
-  <title>My first PWA</title>
+  <title>Area Of Trapezoid, JS and PWA</title>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">My first PWA</span>
+          <span class="mdl-layout-title">Area Of Trapezoid, JS</span>
         </div>
       </header>
+      <h6>Fomula: ([a + b] / 2) * h</h6>
+      <p>Enter The Following Dimensions</p>
       <main class="mdl-layout__content">
         <p></p>
         <img
@@ -61,16 +63,67 @@
           height="25%"
         />
         <p></p>
+               <!-- Numeric Textfield -->
+        <form action="#">
+          Length:
+          <div class="mdl-textfield mdl-js-textfield">
+            <input
+              class="mdl-textfield__input"
+              type="text"
+              pattern="-?[0-9]*(\.[0-9]+)?"
+              id="length-of-trapezoid"
+              aria-label="Length"
+            />
+            <label class="mdl-textfield__label" for="length-of-trapezoid"
+              ></label
+            >
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+        </form>
+                       <!-- Numeric Textfield -->
+        <form action="#">
+          Width:
+          <div class="mdl-textfield mdl-js-textfield">
+            <input
+              class="mdl-textfield__input"
+              type="text"
+              pattern="-?[0-9]*(\.[0-9]+)?"
+              id="width-of-trapezoid"
+              aria-label="Width"
+            />
+            <label class="mdl-textfield__label" for="width-of-trapezoid"
+              ></label
+            >
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+        </form>
+                       <!-- Numeric Textfield -->
+        <form action="#">
+          Height:
+          <div class="mdl-textfield mdl-js-textfield">
+            <input
+              class="mdl-textfield__input"
+              type="text"
+              pattern="-?[0-9]*(\.[0-9]+)?"
+              id="height-of-trapezoid"
+              aria-label="Height"
+            />
+            <label class="mdl-textfield__label" for="height-of-trapezoid"
+              ></label
+            >
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+        </form>
         <!-- Raised button with ripple -->
         <button
           class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-          onclick="myButtonClicked()"
+          onclick="calculateAREA()"
         >
-          Say "Hello, World!"
+          Calculate Area
         </button>
         <!-- basic text -->
         <p></p>
-        <div id="hello-world"></div>
+        <div id="area"></div>
       </main>
     </div>
   </body>
