--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="sam-corbett" />
     <meta name="theme-color" content="#FFFFFF" />
-    <title>GitHub page as PWA template</title>
+    <title>Area Of Trapezoid Calculator</title>
     <link rel="canonical" href="https://sam-corbett/ICS2O-Unit3-01/" />
     <link rel="manifest" href="/ICS2O-Unit3-01/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/styles.css" />
