--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <img
           src="./images/trapezoid.svg"
           alt="Computer"
-          width="25%"
-          height="25%"
+          width="250px"
+          height="150px"
         />
         <p></p>
         <!-- Numeric Textfield -->
@@ -125,7 +125,6 @@
           Calculate Area
         </button>
         <!-- basic text -->
-        <p></p>
         <div id="area"></div>
       </main>
     </div>
