--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--- ICS2O-My first PWA --->
+<!--- ICS2O-Area Of Trapezoid PWA --->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
