--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <p></p>
         <!-- Numeric Textfield -->
         <form action="#">
-          Length:
+          Length (Side A):
           <div class="mdl-textfield mdl-js-textfield">
             <input
               class="mdl-textfield__input"
@@ -83,7 +83,7 @@
         </form>
         <!-- Numeric Textfield -->
         <form action="#">
-          Width:
+          Width (Side B):
           <div class="mdl-textfield mdl-js-textfield">
             <input
               class="mdl-textfield__input"
@@ -101,7 +101,7 @@
         </form>
         <!-- Numeric Textfield -->
         <form action="#">
-          Height:
+          Height (h):
           <div class="mdl-textfield mdl-js-textfield">
             <input
               class="mdl-textfield__input"
